--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bs-fetch": "^0.2.0",
+    "bs-json": "^0.2.4",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "reason-scripts": "0.7.0"
